--- a/Diabetest2/app/src/main/res/layout/activity_menu_paciente.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_menu_paciente.xml
@@ -11,9 +11,11 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -53,17 +55,6 @@
                 android:orientation="horizontal">
 
                 <ImageButton
-                    android:id="@+id/imageButton21"
-                    android:layout_width="183dp"
-                    android:layout_height="186dp"
-                    android:layout_margin="4dp"
-                    android:adjustViewBounds="true"
-                    android:background="@android:color/background_light"
-                    android:scaleType="fitXY"
-                    android:onClick="misiones"
-                    app:srcCompat="@mipmap/bt_evolucion" />
-
-                <ImageButton
                     android:id="@+id/imageButton22"
                     android:layout_width="184dp"
                     android:layout_height="match_parent"
@@ -71,7 +62,18 @@
                     android:adjustViewBounds="true"
                     android:background="@android:color/background_light"
                     android:scaleType="fitXY"
-                    app:srcCompat="@mipmap/bt_evolucion" />
+                    app:srcCompat="@drawable/misiones" />
+
+                <ImageButton
+                    android:id="@+id/imageButton21"
+                    android:layout_width="183dp"
+                    android:layout_height="186dp"
+                    android:layout_margin="4dp"
+                    android:adjustViewBounds="true"
+                    android:background="@android:color/background_light"
+                    android:onClick="misiones"
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/encuestas" />
             </LinearLayout>
 
             <LinearLayout
