--- a/Diabetest2/app/src/main/res/layout/activity_pruebcon.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_pruebcon.xml
@@ -33,8 +33,8 @@
         android:id="@+id/agregar45"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="356dp"
-        android:layout_marginStart="356dp"
+        android:layout_marginLeft="336dp"
+        android:layout_marginStart="336dp"
         android:layout_marginTop="8dp"
         android:onClick="busqueda"
         android:text="buscar"
@@ -45,15 +45,30 @@
         android:id="@+id/buscmisedit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="123dp"
-        android:layout_marginLeft="1dp"
-        android:layout_marginRight="123dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="7dp"
+        android:layout_marginEnd="152dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="152dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/busc"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/reload42"
+        android:layout_width="64dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="recargar"
+        android:text="Button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/agregar45"
         app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
