--- a/Diabetest2/app/src/main/res/layout/activity_comunidad.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_comunidad.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondo_comunidad"
-    tools:context="@drawable/fondo_comunidad">
+    tools:context="juan.example.com.diabetest2.comunes.Comunidad">
 
     <LinearLayout
         android:layout_width="0dp"
