--- a/Diabetest2/app/src/main/res/values/colors.xml
+++ b/Diabetest2/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="blanco50">#7fffffff</color>
     <color name="gris">#787878</color>
     <color name="naranja">#ee7428</color>
-    <color name="year">#999999</color>
+    <color name="year">#dedada</color>
     <color name="title">#222222</color>
 
 </resources>
