--- a/Diabetest2/app/src/main/res/layout/mision_list.xml
+++ b/Diabetest2/app/src/main/res/layout/mision_list.xml
@@ -40,7 +40,7 @@
                     android:id="@+id/titulo"
                     android:layout_width="161dp"
                     android:layout_height="100dp"
-
+                    android:textSize="30sp"
                     android:text="TextView"
                     android:textAppearance="?android:attr/textAppearanceLarge" />
 
