--- a/Diabetest2/app/src/main/res/layout/activity_busc_logro.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_busc_logro.xml
@@ -15,6 +15,15 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/textViewlog"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Logros"
+                android:gravity="center"
+                android:textColor="@android:color/black"
+                android:textSize="24sp" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -29,7 +38,7 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    android:text="Name" />
+                    android:text="Busqueda" />
 
                 <Button
                     android:id="@+id/buscar"
@@ -40,10 +49,11 @@
 
                 <Button
                     android:id="@+id/recargar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="74dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="recar" />
+
+                    android:background="@drawable/reload" />
             </LinearLayout>
 
             <Button
