--- a/Diabetest2/app/src/main/res/layout/movie_list_row.xml
+++ b/Diabetest2/app/src/main/res/layout/movie_list_row.xml
@@ -1,7 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="10dp"
+
+    app:cardBackgroundColor="@color/blanco75"
+    app:cardElevation="10dp"
+
+    >
+    <RelativeLayout
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
@@ -9,7 +24,8 @@
     android:paddingBottom="@dimen/row_padding_vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/row_padding_vertical">
+    android:paddingTop="@dimen/row_padding_vertical"
+    app:cardElevation="10dp">
 
     <TextView
         android:id="@+id/title"
@@ -40,7 +56,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toStartOf="@+id/button40"
-        android:text="UP" />
+        android:background="@drawable/arriba1"
+        android:text=" " />
 
     <CheckBox
         android:id="@+id/listeado1"
@@ -51,18 +68,19 @@
 
     <Button
         android:id="@+id/button40"
-        android:layout_width="wrap_content"
+        android:layout_width="51dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toStartOf="@+id/year"
-        android:text="down" />
+        android:background="@drawable/abajo1" />
 
     <Button
         android:id="@+id/button38"
-        android:layout_width="wrap_content"
+        android:layout_width="74dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toStartOf="@+id/butnot"
-        android:text="Button" />
+        android:text="Logro" />
 
 </RelativeLayout>
+</android.support.v7.widget.CardView>
