--- a/Diabetest2/app/src/main/res/layout/plantilla_mision.xml
+++ b/Diabetest2/app/src/main/res/layout/plantilla_mision.xml
@@ -1,22 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="10dp"
+
+    app:cardBackgroundColor="@color/blanco75"
+    app:cardElevation="10dp">
+
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:padding="1dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="54dp"
         app:cardMaxElevation="5dp"
         card_view:cardCornerRadius="5dp"
         card_view:cardElevation="10dp"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="16dp">
+        tools:layout_editor_absoluteY="2dp">
 
         <TextView
             android:id="@+id/nombre45"
@@ -60,3 +72,4 @@
     </android.support.v7.widget.CardView>
 
 </android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
