--- a/Diabetest2/app/src/main/res/layout/activity_misiones.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_misiones.xml
@@ -5,9 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="juan.example.com.diabetest2.paciente.misiones">
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -25,27 +23,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerMisiones"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scrollbarStyle="outsideInset"
-            android:orientation="horizontal"
-            android:scrollbars="horizontal">
-
-        </android.support.v7.widget.RecyclerView>
-
-        <TextView
-            android:id="@+id/textView151"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="Nuevas Misiones Disponibles"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:textSize="30sp" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recNuevasMis"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
     </LinearLayout>
-</ScrollView>
 </android.support.constraint.ConstraintLayout>
