--- a/Diabetest2/app/src/main/res/layout/activity_recursos_crud.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_recursos_crud.xml
@@ -10,11 +10,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="0dp"
-        tools:ignore="MissingConstraints">
+        tools:layout_editor_absoluteY="0dp">
 
         <TextView
             android:id="@+id/idTituloRecursos"
