Revert "cambios graficos"
This reverts commit 56d791cc417b3157985f4776521baeaea047f166

--- a/Diabetest2/app/src/main/res/layout/activity_busc_logro.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_busc_logro.xml
@@ -15,15 +15,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textViewlog"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Logros"
-                android:gravity="center"
-                android:textColor="@android:color/black"
-                android:textSize="24sp" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -38,7 +29,7 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    android:text="Busqueda" />
+                    android:text="Name" />
 
                 <Button
                     android:id="@+id/buscar"
@@ -49,11 +40,10 @@
 
                 <Button
                     android:id="@+id/recargar"
-                    android:layout_width="74dp"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-
-                    android:background="@drawable/reload" />
+                    android:text="recar" />
             </LinearLayout>
 
             <Button
