--- a/Diabetest2/app/src/main/res/layout/activity_ag_logro.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_ag_logro.xml
@@ -55,12 +55,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="abrir"
-            android:text="Crear" />
+            android:text="Button" />
 
         <TextView
             android:id="@+id/salida1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="" />
+            android:text="sald" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
