--- a/Diabetest2/app/src/main/res/layout/movie_list_row.xml
+++ b/Diabetest2/app/src/main/res/layout/movie_list_row.xml
@@ -1,22 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginTop="10dp"
-
-    app:cardBackgroundColor="@color/blanco75"
-    app:cardElevation="10dp"
-
-    >
-    <RelativeLayout
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
@@ -24,8 +9,7 @@
     android:paddingBottom="@dimen/row_padding_vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/row_padding_vertical"
-    app:cardElevation="10dp">
+    android:paddingTop="@dimen/row_padding_vertical">
 
     <TextView
         android:id="@+id/title"
@@ -56,8 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toStartOf="@+id/button40"
-        android:background="@drawable/arriba1"
-        android:text=" " />
+        android:text="UP" />
 
     <CheckBox
         android:id="@+id/listeado1"
@@ -68,19 +51,18 @@
 
     <Button
         android:id="@+id/button40"
-        android:layout_width="51dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toStartOf="@+id/year"
-        android:background="@drawable/abajo1" />
+        android:text="down" />
 
     <Button
         android:id="@+id/button38"
-        android:layout_width="74dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toStartOf="@+id/butnot"
-        android:text="Logro" />
+        android:text="Button" />
 
 </RelativeLayout>
-</android.support.v7.widget.CardView>
