--- a/Diabetest2/app/src/main/res/layout/fragment_recursos_mision.xml
+++ b/Diabetest2/app/src/main/res/layout/fragment_recursos_mision.xml
@@ -7,9 +7,23 @@
     tools:context=".paciente.RecursosMision">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Recursos de la mision " />
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Información útil para tu misión "
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:textSize="20sp"
+            android:layout_marginBottom="10dp"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recRecPac"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
 
 </FrameLayout>
