--- a/Diabetest2/app/src/main/res/layout/activity_crearmisg3.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_crearmisg3.xml
@@ -19,7 +19,7 @@
         android:id="@+id/recycler_view45"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="96dp"
         android:scrollbars="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -30,9 +30,9 @@
         android:id="@+id/agregar45"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="13dp"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="40dp"
         android:onClick="agregar"
         android:text="agregar"
         app:layout_constraintStart_toEndOf="@+id/busc"
@@ -42,12 +42,23 @@
         android:id="@+id/button43"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="40dp"
         android:onClick="seguirbot"
         android:text="Finalizar"
         app:layout_constraintStart_toEndOf="@+id/agregar45"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView153"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="pasos"
+        android:textColor="@color/negro"
+        android:textSize="24sp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="1dp"
+        tools:ignore="MissingConstraints" />
 
 </android.support.constraint.ConstraintLayout>
