--- a/Diabetest2/app/src/main/res/layout/fragment_pasos_logros_mision.xml
+++ b/Diabetest2/app/src/main/res/layout/fragment_pasos_logros_mision.xml
@@ -13,19 +13,11 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="Mis Pasos"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:textSize="40sp" />
-
         <android.support.v7.widget.RecyclerView
 
             android:id="@+id/recyclerPasos"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 </FrameLayout>
