--- a/Diabetest2/app/src/main/res/layout/fragment_recursos_mision.xml
+++ b/Diabetest2/app/src/main/res/layout/fragment_recursos_mision.xml
@@ -7,6 +7,16 @@
     tools:context=".paciente.RecursosMision">
 
     <!-- TODO: Update blank fragment layout -->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+    </ScrollView>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
