--- a/Diabetest2/app/src/main/res/layout/item_list_pasos.xml
+++ b/Diabetest2/app/src/main/res/layout/item_list_pasos.xml
@@ -11,52 +11,84 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <android.support.v7.widget.CardView
+
+        <TextView
+            android:id="@+id/nombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
+            android:text="TextView"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:textSize="30sp"
+           android:layout_marginLeft="100dp"
+            android:textColor="@android:color/holo_green_dark" />
 
-            app:cardBackgroundColor="@color/blanco75"
-            app:cardElevation="10dp">
-
-            <LinearLayout
+        <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/orden"
-                    android:layout_width="94dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="hola"
-                    android:layout_marginLeft="10dp"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                    android:textSize="30sp" />
+
+            <android.support.v7.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+
+
+                app:cardBackgroundColor="@color/blanco75"
+                app:cardElevation="10dp">
 
                 <LinearLayout
-                    android:layout_width="280dp"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/nombre"
+                        android:id="@+id/textView154"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="TextView"
+                        android:layout_weight="1"
+                        android:text="Dias Totales"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+
+                    <TextView
+                        android:id="@+id/orden"
+                        android:layout_width="116dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_weight="1"
+                        android:text="hola"
                         android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                        android:textColor="@android:color/holo_green_dark" />
+                        android:textSize="30sp" />
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="10dp"
+                    app:cardBackgroundColor="@color/blanco75"
+                    app:cardElevation="10dp">
 
                     <TextView
                         android:id="@+id/descripcion"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:text="TextView" />
-                </LinearLayout>
+                </android.support.v7.widget.CardView>
             </LinearLayout>
-        </android.support.v7.widget.CardView>
+            </LinearLayout>
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
