--- a/Diabetest2/app/src/main/res/layout/plantilla_recursos.xml
+++ b/Diabetest2/app/src/main/res/layout/plantilla_recursos.xml
@@ -5,6 +5,15 @@
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
     android:orientation="vertical">
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        app:cardBackgroundColor="@color/blanco75"
+        app:cardElevation="10dp">
 
 
     <LinearLayout
@@ -62,5 +71,5 @@
             android:scaleType="fitXY"
             app:srcCompat="@drawable/line_gray_75" />
     </LinearLayout>
-
+    </android.support.v7.widget.CardView>
 </LinearLayout>
