mision 1 solo paso
mision solo paso

--- a/Diabetest2/app/src/main/res/layout/movie_list_row.xml
+++ b/Diabetest2/app/src/main/res/layout/movie_list_row.xml
@@ -12,11 +12,11 @@
     app:cardElevation="10dp"
 
     >
-    <RelativeLayout
+
+    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:background="?android:attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
@@ -51,35 +51,12 @@
             android:textColor="@color/year" />
 
         <Button
-            android:id="@+id/butnot"
-            android:layout_width="51dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_toStartOf="@+id/button40"
-            android:background="@drawable/arriba1"
-            android:text=" " />
-
-        <CheckBox
-            android:id="@+id/listeado1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true" />
-
-        <Button
-            android:id="@+id/button40"
-            android:layout_width="51dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_toStartOf="@+id/year"
-            android:background="@drawable/abajo1" />
-
-        <Button
             android:id="@+id/button38"
             android:layout_width="74dp"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
-            android:layout_toStartOf="@+id/butnot"
+            android:layout_marginEnd="26dp"
             android:text="Logro" />
 
     </RelativeLayout>
