--- a/Diabetest2/app/src/main/res/layout/activity_pasosmod.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_pasosmod.xml
@@ -53,7 +53,7 @@
 
     <Button
         android:id="@+id/button32"
-        android:onClick=""
+        android:onClick="modificar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
