--- a/Diabetest2/app/src/main/res/values/colors.xml
+++ b/Diabetest2/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorBackground">#ffffff</color>
     <color name="negro">#000000</color>
+    <color name="darkblue">#8380a9</color>
     <color name="blanco">#ffffff</color>
     <color name="blanco75">#b7ffffff</color>
     <color name="blanco50">#7fffffff</color>
