--- a/Diabetest2/app/src/main/res/layout/activity_misiones.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_misiones.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="juan.example.com.diabetest2.paciente.misiones">
+    tools:context="juan.example.com.diabetest2.paciente.misiones"
+    android:background="@drawable/fondo">
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -19,7 +20,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:text="Mis Misiones"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:textColor="@color/blanco"
+
             android:textSize="30sp" />
 
         <android.support.v7.widget.RecyclerView
@@ -38,7 +40,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:text="Nuevas Misiones Disponibles"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+
+            android:textColor="@color/blanco"
             android:textSize="30sp" />
 
         <android.support.v7.widget.RecyclerView
