--- a/Diabetest2/app/src/main/res/layout/activity_ver_recursos_mision_paciente.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_ver_recursos_mision_paciente.xml
@@ -41,7 +41,7 @@
                 android:padding="10dp"
                 android:text="TextView"
                 android:textAlignment="center"
-                android:textColor="@android:color/holo_green_dark"
+                android:textColor="@color/darkblue"
                 android:textSize="24sp"
                 android:textStyle="bold|italic" />
 
