--- a/Diabetest2/app/src/main/res/layout/fragment_pasos_logros_mision.xml
+++ b/Diabetest2/app/src/main/res/layout/fragment_pasos_logros_mision.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondo_metas"
+    android:background="@drawable/fondo"
 
     tools:context=".paciente.pasosLogrosMision">
 
@@ -23,7 +23,7 @@
 
         android:layout_marginTop="10dp"
 
-        app:cardBackgroundColor="@color/blanco75"
+        app:cardBackgroundColor="@color/blanco"
         app:cardElevation="10dp">
 
 
@@ -39,8 +39,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="100dp"
                     android:text="TextView"
+
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                    android:textColor="@android:color/holo_green_dark"
+                    android:textColor="@color/darkblue"
                     android:textSize="30sp" />
 
                 <LinearLayout
@@ -51,7 +52,7 @@
 
                     <android.support.v7.widget.CardView
 
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
 
@@ -62,51 +63,53 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:orientation="vertical">
+                            android:orientation="horizontal">
 
-                            <TextView
-                                android:id="@+id/textView154"
+                            <LinearLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
+                                android:layout_height="match_parent"
                                 android:layout_weight="1"
-                                android:text="Dias Totales"
-                                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                                android:orientation="vertical">
 
-                            <TextView
-                                android:id="@+id/orden"
-                                android:layout_width="116dp"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="10dp"
+                                <TextView
+                                    android:id="@+id/textView154"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:text="Dias Totales"
+                                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+
+                                <TextView
+                                    android:id="@+id/orden"
+                                    android:layout_width="116dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="10dp"
+                                    android:layout_weight="1"
+                                    android:text="hola"
+                                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                                    android:textSize="30sp" />
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
                                 android:layout_weight="1"
-                                android:text="hola"
-                                android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                                android:textSize="30sp" />
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:id="@+id/descripcion"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_weight="1"
+                                    android:text="TextView" />
+                            </LinearLayout>
+
                         </LinearLayout>
+
                     </android.support.v7.widget.CardView>
 
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="10dp"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginRight="10dp"
-
-                            app:cardElevation="10dp">
-
-                            <TextView
-                                android:id="@+id/descripcion"
-                                android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                android:text="TextView" />
-                        </android.support.v7.widget.CardView>
-                    </LinearLayout>
                 </LinearLayout>
 
             </LinearLayout>
