--- a/Diabetest2/app/src/main/res/layout/mision_list.xml
+++ b/Diabetest2/app/src/main/res/layout/mision_list.xml
@@ -15,7 +15,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
 
-        app:cardBackgroundColor="@color/year"
+        app:cardBackgroundColor="@color/blanco"
         app:cardElevation="10dp">
 
         <LinearLayout
@@ -28,7 +28,7 @@
                 android:layout_width="0dp"
                 android:layout_height="200dp"
                 android:layout_weight="1"
-                app:srcCompat="@mipmap/hand" />
+                app:srcCompat="@drawable/quest" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -42,19 +42,22 @@
                     android:layout_height="100dp"
                     android:textSize="30sp"
                     android:text="TextView"
+                    android:textColor="@color/darkblue"
                     android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <TextView
                     android:id="@+id/dificultad"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textSize="30sp"
                     android:text="TextView" />
 
                 <TextView
                     android:id="@+id/categoria"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="TextView"
+                    android:textSize="30sp" />
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
