--- a/Diabetest2/app/src/main/res/layout/activity_misiongen.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_misiongen.xml
@@ -44,7 +44,7 @@
                     android:id="@+id/button30"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
-                    android:background="@drawable/borrarmision" />
+                    android:background="@drawable/recursosMis" />
 
                 <Button
                     android:id="@+id/button31"
