--- a/Diabetest2/app/src/main/res/layout/activity_crearmisg4.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_crearmisg4.xml
@@ -43,12 +43,10 @@
             android:layout_height="wrap_content"
             android:text="Dias" />
 
-        <EditText
-            android:id="@+id/dias"
+        <Spinner
+            android:id="@+id/spinnermar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="numberSigned" />
+            android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/creacionb1"
