--- a/Diabetest2/app/src/main/res/layout/activity_misiongen.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_misiongen.xml
@@ -44,7 +44,8 @@
                     android:id="@+id/button31"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
-                    android:background="@drawable/logrosmis" />
+                    android:background="@drawable/logrosmis"
+                    android:onClick="logrosver" />
 
                 <Button
                     android:id="@+id/button30"
