--- a/Diabetest2/app/src/main/res/layout/content_controles_log.xml
+++ b/Diabetest2/app/src/main/res/layout/content_controles_log.xml
@@ -17,7 +17,7 @@
             android:id="@+id/nombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="Opciones" />
 
         <Button
             android:id="@+id/edicion"
